--- a/app/views/notifications/show.html.erb
+++ b/app/views/notifications/show.html.erb
@@ -1,3 +1,10 @@
 <h1>Show Single Notification </h1>
 <h3><%= @notification.title %></h3>
 <p><%= @notification.description %></p>
+<p>Company:    
+<%= if @notification.company 
+    Company.find(@notification.company).name 
+    else ''
+    end %> </p>
+<p>Date: <%= @notification.date %></p>
+<p>Unread: <%= @notification.active %></p>
